<resources>
    <string name="app_name">人脸通过</string>

    <string name="registered">注册</string>

    <string name="fast_login">快速检测登录(推荐)</string>

    <string name="face_library">人脸库</string>

    <string name="automatic_detection">自动检测</string>

    <string name="select_album">从相册选取</string>

    <string name="enter_name">请输入用户名</string>

    <string name="face_record_first">请先进行人脸采集</string>

    <string name="name_can_not_be_null">姓名不能为空</string>

    <string name="registered_success">注册成功</string>

    <string name="registered_fail">注册失败</string>


    <string name="face_library_manage">人脸管理</string>

    <string name="detect_no_face">未检测到人脸</string>
    <string name="detect_face_in">把脸移入框内</string>
    <string name="detect_zoom_in">手机拿近一点</string>
    <string name="detect_zoom_out">手机拿远一点</string>
    <string name="detect_head_up">头抬高些</string>
    <string name="detect_head_down">头放低些</string>
    <string name="detect_head_left">向左调整下头部角度</string>
    <string name="detect_head_right">向右调整下头部角度</string>
    <string name="detect_occ_face">脸部有遮挡</string>
    <string name="detect_occ_left_eye">左眼有遮挡</string>
    <string name="detect_occ_right_eye">右眼有遮挡</string>
    <string name="detect_occ_nose">鼻子有遮挡</string>
    <string name="detect_occ_mouth">嘴部有遮挡</string>
    <string name="detect_left_contour">左脸颊有遮挡</string>
    <string name="detect_right_contour">右脸颊有遮挡</string>
    <string name="detect_chin_contour">下巴有遮挡</string>
    <string name="detect_low_light">光线再亮些</string>
    <string name="detect_keep">请握稳手机，视线平视手机</string>
    <string name="detect_standard">请正对手机</string>
    <string name="detect_timeout">检测超时</string>
    <string name="liveness_eye">眨眨眼</string>
    <string name="liveness_eye_left">请眨眨左边眼睛</string>
    <string name="liveness_eye_right">请眨眨右边眼睛</string>
    <string name="liveness_mouth">张张嘴</string>
    <string name="liveness_head_left">向左缓慢转头</string>
    <string name="liveness_head_right">向右缓慢转头</string>
    <string name="liveness_head_left_right">摇摇头</string>
    <string name="liveness_head_up">缓慢抬头</string>
    <string name="liveness_head_down">缓慢低头</string>
    <string name="liveness_good">非常好</string>
</resources>
