<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 Baidu, Inc. All Rights Reserved.
  -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/username_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="#000000"
        android:text=""
        android:textSize="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintWidth_percent="0.54" />

    <ImageView
        android:id="@+id/avatar_iv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        android:scaleType="centerCrop"
        android:src="@drawable/avatar"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_et"
        app:layout_constraintWidth_percent="0.55" />

    <Button
        android:id="@+id/detect_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        android:text="@string/automatic_detection"
        android:textAllCaps="false"
        app:layout_constraintHeight_percent="0.055"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/shape_select_pic"
        app:layout_constraintRight_toLeftOf="@+id/pick_from_album_btn"
        app:layout_constraintTop_toBottomOf="@+id/avatar_iv"
        app:layout_constraintWidth_percent="0.31" />

    <Button
        android:id="@+id/pick_from_album_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        android:text="@string/select_album"
        android:textAllCaps="false"
        android:background="@drawable/shape_select_pic"
        app:layout_constraintHeight_percent="0.055"
        app:layout_constraintLeft_toRightOf="@+id/detect_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar_iv"
        app:layout_constraintWidth_percent="0.31" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/registered"
        app:layout_constraintWidth_percent="0.31"
        app:layout_constraintHeight_percent="0.055"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/shape_registered"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pick_from_album_btn" />


</android.support.constraint.ConstraintLayout>
