<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 Baidu, Inc. All Rights Reserved.
  -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg">


    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/head"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@mipmap/ic_head"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.3" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_bg"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.42"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.85">

        <Button
            android:id="@+id/reg_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="24dp"
            android:background="#88C9FF"
            android:text="@string/registered"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/login1_btn"
            app:layout_constraintHeight_percent="0.14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.72" />

        <!--        <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="演示注册流程，包含有动作活体检测，确保注册用户为真人，并完成人脸注册操作"
                    android:visibility="gone" />-->

        <Button
            android:id="@+id/login1_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#708DB7"
            android:text="@string/fast_login"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.72" />

        <!--        <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="【推荐】多次检测与采集人脸，并优化UI界面。采集图片将会判断是否活体（防止二次翻拍）"
                    android:visibility="gone" />-->

        <Button
            android:id="@+id/face_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:background="#708DB7"
            android:text="@string/face_library"
            android:textAllCaps="false"
            app:layout_constraintHeight_percent="0.14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login1_btn"
            app:layout_constraintWidth_percent="0.72" />

        <Button
            android:id="@+id/detected_btn"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:text="人脸认证登录"
            android:visibility="gone" />

        <!--        <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="用户名登录后，刷脸完成登录。同时检测采集的图片是否为活体（防止二次翻拍）"
                    android:visibility="gone" />-->

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:text="重置本地用户信息"
            android:visibility="gone" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>

